@@ -1,9 +1,9 @@
 <?php
 /*
 Plugin Name: CF Global Posts 
-Plugin URI:  
+Plugin URI: http://crowdfavorite.com
 Description: Generates a 'shadow blog' where posts mu-install-wide are conglomorated into one posts table for data compilation and retrieval 
-Version: 1.4
+Version: 1.5(trunk)
 Author: Crowd Favorite
 Author URI: http://crowdfavorite.com
 */
@@ -11,6 +11,7 @@ Author URI: http://crowdfavorite.com
 /* Defining Shadow Blog's Site ID */
 define('CFGP_SITE_ID', 999999);
 define('CFGP_SITE_DOMAIN', 'cf-global-posts.example.com');
+define('CFGP_SITE_IMPORT_INCREMENT', 50);
 
 // ini_set('display_errors', '1'); ini_set('error_reporting', E_ALL);
 
@@ -693,8 +694,12 @@ function cfgp_request_handler() {
 				
 			case 'add_blog_to_shadow_blog':
 				set_time_limit(0);
+				
+				/* We don't want error displaying corrupting the json */
+				ini_set('display_errors', 0);
+				
 				/* Set how many blog posts to do at once */
-				$increment = 5;
+				$increment = CFGP_SITE_IMPORT_INCREMENT;
 				
 				/* Grab the ID of the blog we're pulling from */
 				$blog_id =  (int) $_POST['blog_id'];
